[gd_scene load_steps=29 format=3 uid="uid://cdo68e2q38j5e"]

[ext_resource type="Texture2D" uid="uid://w05xpp1nc6x6" path="res://Sprites/Characters/Character_pierces/GeneralEffects.png" id="1"]
[ext_resource type="Script" uid="uid://61lqj5jvl0mv" path="res://Scripts/Triggers/FXs/EffectCreator.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://c34pgqo7wravb" path="res://Sfxs/Explosion_A.ogg" id="3_caal6"]
[ext_resource type="AudioStream" uid="uid://d3qikkx4ojjhh" path="res://Sfxs/Explosion_B.ogg" id="4_gyd2c"]
[ext_resource type="AudioStream" uid="uid://ctjeg78cj8ova" path="res://Sfxs/Explosion_C.ogg" id="5_8un28"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_oibjf"]
random_pitch = 1.1
streams_count = 3
stream_0/stream = ExtResource("3_caal6")
stream_0/weight = 1.1
stream_1/stream = ExtResource("4_gyd2c")
stream_1/weight = 1.1
stream_2/stream = ExtResource("5_8un28")
stream_2/weight = 1.1

[sub_resource type="Animation" id="1"]
resource_name = "0"
length = 0.26
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/EffectSprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.11, 0.14, 0.17, 0.21),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(1, 0, 18, 18), Rect2(19, 0, 102, 101), Rect2(121, 0, 120, 120), Rect2(241, 0, 124, 124), Rect2(365, 0, 126, 126), Rect2(491, 0, 130, 130), Rect2(621, 0, 136, 136)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/EffectSprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.11, 0.14, 0.17, 0.21),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0.5), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/EffectSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="2"]
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/EffectSprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.11, 0.14, 0.17, 0.21),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(757, 0, 18, 18), Rect2(775, 0, 102, 101), Rect2(877, 0, 120, 120), Rect2(997, 0, 124, 124), Rect2(1121, 0, 126, 126), Rect2(1247, 0, 130, 130), Rect2(1377, 0, 136, 136)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/EffectSprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.11, 0.14, 0.17, 0.21),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0.5), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/EffectSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="3"]
length = 0.08
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/EffectSprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(1513, 0, 19, 21), Rect2(1532, 0, 23, 24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/EffectSprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1.5, -0.5), Vector2(-1.5, -1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/EffectSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="4"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/EffectSprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04, 0.06, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.34),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(1555, 0, 72, 31), Rect2(1627, 0, 92, 26), Rect2(1719, 0, 86, 47), Rect2(1805, 0, 119, 70), Rect2(1924, 0, 156, 82), Rect2(2080, 0, 170, 83), Rect2(2250, 0, 183, 63), Rect2(0, 136, 206, 42), Rect2(206, 136, 212, 24), Rect2(418, 136, 215, 7), Rect2(633, 136, 211, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/EffectSprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04, 0.06, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.34),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -23.5), Vector2(0, -21), Vector2(2, -31.5), Vector2(-0.5, -43), Vector2(0, -49), Vector2(-3, -49.5), Vector2(-6.5, -38.5), Vector2(-3, -28), Vector2(-8, -19), Vector2(-7.5, -10.5), Vector2(-8.5, -8.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/EffectSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="5"]
length = 0.16
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/EffectSprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Rect2(844, 136, 512, 56), Rect2(1356, 136, 501, 56), Rect2(1857, 136, 504, 56), Rect2(2361, 136, 512, 56)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/EffectSprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -15), Vector2(5.5, -15), Vector2(4, -15), Vector2(0, -15)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/EffectSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="6"]
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/EffectSprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(2873, 136, 4, 4), Rect2(2877, 136, 6, 6), Rect2(2883, 136, 8, 8), Rect2(2891, 136, 14, 13), Rect2(2905, 136, 22, 21), Rect2(2927, 136, 24, 23), Rect2(2951, 136, 28, 27), Rect2(2979, 136, 30, 29), Rect2(3009, 136, 32, 31), Rect2(3041, 136, 34, 34)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/EffectSprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, -0.5), Vector2(1, -0.5), Vector2(1, -0.5), Vector2(1, -0.5), Vector2(1, -0.5), Vector2(1, -0.5), Vector2(1, -1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/EffectSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, -0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -16)]
}

[sub_resource type="Animation" id="7"]
length = 0.32
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/EffectSprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(3075, 136, 5, 2), Rect2(3080, 136, 11, 9), Rect2(3091, 136, 44, 37), Rect2(3135, 136, 76, 64), Rect2(3211, 136, 71, 66), Rect2(3282, 136, 61, 67), Rect2(0, 203, 41, 46), Rect2(41, 203, 40, 40)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/EffectSprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-0.5, -1), Vector2(-5.5, -4.5), Vector2(-18, -18.5), Vector2(-35, -32), Vector2(-36.5, -33), Vector2(-42.5, -34.5), Vector2(-54.5, -43), Vector2(-57, -46)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/EffectSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="8"]
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/EffectSprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04, 0.06, 0.08, 0.12, 0.16, 0.18, 0.2, 0.22),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(81, 203, 9, 16), Rect2(90, 203, 11, 18), Rect2(101, 203, 13, 24), Rect2(114, 203, 27, 40), Rect2(141, 203, 41, 85), Rect2(182, 203, 51, 113), Rect2(233, 203, 63, 140), Rect2(296, 203, 68, 144), Rect2(364, 203, 62, 145), Rect2(426, 203, 29, 128)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/EffectSprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04, 0.06, 0.08, 0.12, 0.16, 0.18, 0.2, 0.22),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-0.5, 0), Vector2(-0.5, 0), Vector2(-1.5, 0), Vector2(-8.5, -2), Vector2(-15.5, -0.5), Vector2(-20.5, 1.5), Vector2(-26.5, 9), Vector2(-29, 9), Vector2(-35, 8.5), Vector2(-40.5, 8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/EffectSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="9"]
length = 0.38
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/EffectSprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(455, 203, 16, 6), Rect2(471, 203, 36, 13), Rect2(507, 203, 65, 25), Rect2(572, 203, 94, 30), Rect2(666, 203, 118, 33), Rect2(784, 203, 131, 41), Rect2(915, 203, 146, 42), Rect2(1061, 203, 150, 44), Rect2(1211, 203, 136, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/EffectSprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -2), Vector2(0, -4.5), Vector2(0.5, -10.5), Vector2(0, -12), Vector2(0, -13.5), Vector2(-0.5, -16.5), Vector2(0, -18), Vector2(0, -19), Vector2(1, -38.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/EffectSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="10"]
length = 0.14
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/EffectSprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04, 0.08),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Rect2(1347, 203, 30, 30), Rect2(1377, 203, 36, 43), Rect2(1413, 203, 80, 102), Rect2(0, 348, 93, 109)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/EffectSprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04, 0.08),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-1, -2), Vector2(-1, -2.5), Vector2(21, 0), Vector2(16.5, -1.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/EffectSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_d83yi"]
length = 0.28
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/EffectSprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(93, 348, 22, 22), Rect2(115, 348, 26, 26), Rect2(141, 348, 47, 48), Rect2(188, 348, 128, 128), Rect2(316, 348, 164, 164), Rect2(480, 348, 66, 66), Rect2(546, 348, 66, 66)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/EffectSprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0.5, -1), Vector2(0, -1), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_x7aj4"]
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/EffectSprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(612, 348, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/EffectSprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-255.5, -255.5)]
}

[sub_resource type="Animation" id="Animation_q2rtd"]
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/EffectSprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(613, 348, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/EffectSprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-255.5, -255.5)]
}

[sub_resource type="Animation" id="Animation_20uo7"]
length = 0.02
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/EffectSprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(614, 348, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/EffectSprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-255.5, -255.5)]
}

[sub_resource type="Animation" id="Animation_mbv4m"]
length = 0.02
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/EffectSprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(615, 348, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/EffectSprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-255.5, -255.5)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"self_playsound"
}]
}

[sub_resource type="Animation" id="Animation_hkkko"]
length = 0.63
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/EffectSprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04, 0.06, 0.09, 0.12, 0.15, 0.18, 0.21, 0.24, 0.27, 0.3, 0.33),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(616, 348, 32, 32), Rect2(648, 348, 60, 46), Rect2(708, 348, 64, 53), Rect2(772, 348, 105, 103), Rect2(877, 348, 174, 143), Rect2(1051, 348, 170, 141), Rect2(1221, 348, 163, 144), Rect2(1384, 348, 123, 120), Rect2(1507, 348, 111, 120), Rect2(1618, 348, 112, 122), Rect2(1730, 348, 116, 125), Rect2(1846, 348, 104, 100), Rect2(0, 512, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/EffectSprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04, 0.06, 0.09, 0.12, 0.15, 0.18, 0.21, 0.24, 0.27, 0.3, 0.33),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(5, -2), Vector2(0, 0.5), Vector2(2.5, -2.5), Vector2(2, -11.5), Vector2(4, -9.5), Vector2(10.5, -13), Vector2(-5.5, -1), Vector2(-1.5, -2), Vector2(-1, -3), Vector2(-2, -5.5), Vector2(-8, -6), Vector2(-255.5, -255.5)]
}

[sub_resource type="Animation" id="Animation_1ihum"]
length = 0.12
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/EffectSprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(1, 512, 29, 29)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/EffectSprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_lpl3t"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/EffectSprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06, 0.12, 0.18, 0.24),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(30, 512, 2, 2), Rect2(32, 512, 12, 12), Rect2(44, 512, 32, 32), Rect2(76, 512, 57, 59), Rect2(133, 512, 61, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/EffectSprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06, 0.12, 0.18, 0.24),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0.5, -1.5), Vector2(-0.5, -1)]
}

[sub_resource type="Animation" id="Animation_028be"]
length = 0.18
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/EffectSprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03, 0.06, 0.09, 0.12, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(194, 512, 2, 2), Rect2(196, 512, 12, 12), Rect2(208, 512, 24, 25), Rect2(232, 512, 36, 36), Rect2(268, 512, 41, 42), Rect2(309, 512, 43, 44)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/EffectSprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.03, 0.06, 0.09, 0.12, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, -0.5), Vector2(0, 0), Vector2(-0.5, -2), Vector2(-0.5, -2)]
}

[sub_resource type="Animation" id="Animation_t6bsu"]
resource_name = "Null"
length = 0.04
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/EffectSprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/EffectSprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(162.5, 123.5)]
}

[sub_resource type="Animation" id="Animation_ijo0g"]
length = 0.03
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/EffectSprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(352, 512, 6, 15)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/EffectSprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -4.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pdwtv"]
_data = {
&"000": SubResource("1"),
&"001": SubResource("2"),
&"002": SubResource("3"),
&"003": SubResource("4"),
&"004": SubResource("5"),
&"005": SubResource("6"),
&"006": SubResource("7"),
&"007": SubResource("8"),
&"008": SubResource("9"),
&"009": SubResource("10"),
&"010": SubResource("Animation_d83yi"),
&"011": SubResource("Animation_x7aj4"),
&"012": SubResource("Animation_q2rtd"),
&"013": SubResource("Animation_20uo7"),
&"014": SubResource("Animation_mbv4m"),
&"015": SubResource("Animation_hkkko"),
&"016": SubResource("Animation_1ihum"),
&"017": SubResource("Animation_lpl3t"),
&"018": SubResource("Animation_028be"),
&"019": SubResource("Animation_ijo0g"),
&"Null": SubResource("Animation_t6bsu")
}

[node name="EffectCreator" type="Node2D"]
z_index = 50
script = ExtResource("2")

[node name="ASFX_Explosion" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_oibjf")
volume_db = -5.0
pitch_scale = 1.4
max_distance = 4000.0
attenuation = 0.75

[node name="Sprite" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="EffectSprite" type="Sprite2D" parent="Sprite"]
unique_name_in_owner = true
z_index = 15
texture = ExtResource("1")
region_enabled = true
region_rect = Rect2(1, 0, 18, 18)

[node name="EffectAnimationPlayer" type="AnimationPlayer" parent="Sprite"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_pdwtv")
}
autoplay = "Null"
